--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"   crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"  crossorigin="anonymous">  
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"  crossorigin="anonymous"> </script>
+<!-- Sweet alert -->
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <title><%= htmlWebpackPlugin.options.title %></title>
     <style>
