--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"  crossorigin="anonymous"> </script>
 <!-- Sweet alert -->
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<!-- Graphs -->
 
     <title><%= htmlWebpackPlugin.options.title %></title>
     <style>
