--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"  crossorigin="anonymous"> </script>
 <!-- Sweet alert -->
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-<!-- Graphs -->
+<!-- Chart js-->
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <title><%= htmlWebpackPlugin.options.title %></title>
     <style>
