--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <!-- material icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"   crossorigin="anonymous">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"  crossorigin="anonymous">  
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"  crossorigin="anonymous"> </script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    JS
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <!-- Sweet alert -->
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <!-- Chart js-->
@@ -36,3 +37,8 @@
     
   </body>
 </html>
+
+
+<script>
+  AOS.init();
+</script>
